# smart_home1

./: Cargo.toml
src/: device.rs  lib.rs  main.rs  report.rs  smart_home.rs
tests/: tests.rs
