[package]
name = "smart_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smart_home"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
thiserror = "1.0.37"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
